@@ -4,6 +4,7 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785, STR #2861, STR #2862)
+	- The IPP backend did not relay marker-* attributes.
 	- The CUPS GNOME/KDE menu item was not localized for
 	  Japanese (STR #2876)
 	- The cupstestppd utility reported mixed line endings for
